# tensor

./: .clang-format  .gitignore  CMakeLists.txt  pyproject.toml
benchmarks/: CMakeLists.txt  tensor_benchmark.cpp
bindings/python/: tensor.cpp
include/tensor/: loss.h  loss.hpp  old.h  ops.h  ops.hpp  sgd.h  sgd.hpp  tensor.h  tensor.hpp  tensor_impl.h
python/: autograd.py  test.py
src/: main.cpp  tensor.h
tests/: CMakeLists.txt  manual.cpp  tensor_test.cpp
