[build-system]
requires = ["scikit-build-core", "nanobind >=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tensor"
version = "0.0.1"
description = "C++ tensor extension"
requires-python = ">=3.13"

[tool.scikit-build]
minimum-version = "0.11"
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.20"
cmake.build-type = "Release"
wheel.install-dir = "."

